[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opsalert"
version = "0.1.0"
description = "Standalone operational alerting — fire-and-forget alerts with dashboard queries and pluggable delivery."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
dynamic_context = "test_function"
source = ["opsalert"]
